1.9.14
Core:
  * MKBI backend: Use "htmlcgi" URL/path for building links to the Checkmk GUI
    (Aggregations used the base_url, which should not be used for user URLs)

Worldmap:
  * Consistent page reloads: center + zoom of the map kept in URL

Frontend
  * FIX: Fix creating users when mbstring extension is not available

1.9.13
Worldmap:
  * Configurable OpenStreetMap tile server URL (worldmap_tiles_{url,attribution})
  * OpenStreetMap tile colors can now be dimmed using the
    worldmap_tiles_saturate configuration option so that larger colorful
    backgrounds do not interfere with the map objects.
  * Optional 2nd map layer (satellite imagery)
  * FIX: Worldmap textbox visibility per zoom level
  * FIX: The "clone object" functionality did sometimes break with an error
  message like "Invalid argument supplied for foreach()"
  (Thanks to Vojtech Pithart for taking the time to improve the NagVis worldmap!)

1.9.12
Core:
  * FIX: Allow "*" character to be part of backend dbpass values
  * Multisite Snapin: Reworked data export API to snapin. The new API is
  compatible with Checkmk 1.6b2 and newer.

Frontend
  * FIX: Fixed incompatibility with PHP 7.2 (count(STRING)) when creating roles

Geomap:
  * Improved error handling of CSV lines with less than 4 fields

1.9.11
Frontend
  * FIX: Weathermap lines now respect the configured error colors
  * FIX: Fixed wrapping of long map names in sidebar

1.9.10
Frontend
  * FIX: Network error popups are now shown when an error occurs and hidden again
         automatically when a subsequent call succeeds

1.9.9
Frontend:
  * FIX: Fixed possible "Cannot read property 'conf' ... Line 4383" error when
         trying to interact with the map while it is initially loading
  * FIX: Fixed incompatibility with PHP 7.2 when creating new users
  * FIX: Fixed loading sounds when using non standard HTTP/HTTPS ports
  * FIX: Fixed "JavaScript Error : checkHideMenu" on worldmaps when header is
         disabled

1.9.8
Frontend: